# trace

./: .travis.yml  Cargo.toml  README  README.md  gen.py  gen_syscalls.py  gen_syscalls.sh
src/: addressmap.rs  bytebuf.rs  main.rs  process.rs  syscalls64.rs
src/elftools/: elftools_const.rs  mod.rs
src/inferior/: mod.rs
src/ptrace_util/: mod.rs
